--- a/app/src/main/res/layout/activity_new_manger.xml
+++ b/app/src/main/res/layout/activity_new_manger.xml
@@ -7,6 +7,7 @@
     android:background="@drawable/background"
     android:layout_height="match_parent"
     android:paddingHorizontal="30dp"
+    android:gravity="center"
     tools:context=".NewMangerActivity">
     <TextView
         android:layout_width="wrap_content"
